--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=BBH+Bogle:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/marquee.css">
 </head>
 <body>
     <div class="page-container">
@@ -17,5 +18,7 @@
             <a href="index.html" class="back-link">home</a>
         </div>
     </div>
+    
+    <script src="js/marquee.js"></script>
 </body>
 </html>
