--- a/about.html
+++ b/about.html
@@ -8,9 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BBH+Bogle:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/pages.css">
-    <link rel="stylesheet" href="css/content.css">
-    <link rel="stylesheet" href="css/marquee.css">
 </head>
 <body class="content-page">
     <div class="marquee-top"></div>
@@ -20,7 +17,6 @@
     </main>
     <div class="marquee-bottom"></div>
 
-    <script src="js/marquee.js"></script>
-    <script src="js/loader.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
