--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 <body class="content-page">
     <main class="page-content">
         <!-- El contenido se cargará dinámicamente aquí -->
+        <a href="https://meowrhino.studio" class="about-web-link" target="_blank" rel="noopener noreferrer">web:meowrhino</a>
         <a href="index.html" class="back-link">home</a>
     </main>
 
