major updates a ver si todo va bien

--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=BBH+Bogle:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="content-page">
+<body class="content-page" data-category="about">
     <main class="page-content">
         <!-- El contenido se cargará dinámicamente aquí -->
         <a href="index.html" class="back-link">
             <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="back-link-logo">
         </a>
-        <a href="https://meowrhino.studio" class="about-web-link" target="_blank" rel="noopener noreferrer">web:meowrhino</a>
+        <a href="https://meowrhino.studio" class="about-web-link" target="_blank" rel="noopener noreferrer">web: meowrhino</a>
     </main>
 
     <script src="js/main.js"></script>
