--- a/blog.html
+++ b/blog.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=BBH+Bogle:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="content-page">
+<body class="content-page" data-category="blog">
     <main class="page-content">
-        <h1>blog</h1>
+        <!-- El contenido se cargará dinámicamente aquí -->
         <a href="index.html" class="back-link">
             <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="back-link-logo">
         </a>
